--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ background-size: cover ;
 background-repeat: no-repeat;
 }
 .skill{
-    background-color: #301392;;   
+    background-color: #210b69;   
     color: white;
     margin-bottom: 15px; 
     border-radius: 5px;
